tests/Checker/everything/errors/21a.vc
int main() {
    for (; 1;) {
        int a = 0;
        if (a == 0) {
            break;
        }
    }
}
